[project]
name = "SSSort"
version = "0.1.0"
description = "spike sorter for single sensillum recordings"
authors = [
    {name = "Georg Raiser", email = "grg2rsr@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "scipy>=1.10.1",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "neo>=0.12.0",
    "quantities>=0.14.1",
    "elephant>=0.12.0",
    "scikit-learn>=1.2.2",
    "tqdm>=4.65.0",
    "seaborn>=0.12"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff.format]
quote-style = "single"